fix Changes made to spacing and meeting assigned tasks were completed

--- a/src/main/resources/style/endgameTheme.css
+++ b/src/main/resources/style/endgameTheme.css
@@ -8,7 +8,7 @@
 }
 
 .container {
-    -fx-padding: 140px 220px;
+    -fx-padding: 140px 175px;
     -fx-alignment: center;
 }
 
